# stockbrot

./: .env.example  .gitignore  Cargo.toml  README.md  justfile
engine/: Cargo.toml
engine/src/: evaluate.rs  evaluated_position.rs  lib.rs  quiesce_search.rs  search.rs
engine/src/evaluation/: evaluate.rs  helper.rs  mobility.rs  mod.rs  pawn_connectivity.rs  piece_sq_tables.rs  simple_piece_sq_tables.rs
engine/src/evaluation/pawn/: connectivity.rs  isolated.rs  mod.rs
engine/src/search/: alpha_beta.rs  evaluated_position.rs  iterative_deepening.rs  mod.rs  move_order.rs  quiesce_search.rs
engine/src/transposition_table/: entry.rs  mod.rs  table.rs
engine/tests/: evaluation.rs
lichess/: Cargo.toml
lichess/src/: event_stream.rs  game.rs  game_stream.rs  main.rs
opening_db/: .gitignore  Cargo.toml  build.rs
opening_db/generator/: Cargo.toml  README.md
opening_db/generator/src/: main.rs
opening_db/src/: lib.rs  node_map_default.rs
opening_db_types/: Cargo.toml
opening_db_types/src/: lib.rs
