[package]
name = "engine"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
chess = "3.2.0"
log = "0.4.17"
rayon = "1.6.0"
chashmap = "2.2.2"

opening_db = { path = "../opening_db" }
opening_db_types = { path = "../opening_db_types" }

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3